# eval-vlm

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: example.yaml
native/cmnn/: CMakeLists.txt  README.md  engine.cpp
native/cmnn/spike/: concurrency_spike.cpp
src/eval_vlm/: __init__.py  __main__.py  cli.py  config.py  evaluate.py  predict.py  runner.py  workspace.py
src/eval_vlm/data/: __init__.py  loader.py  schema.py  splitter.py
src/eval_vlm/inference/: __init__.py  base.py  cmnn_backend.py  fake_backend.py  mnn_backend.py  openai_backend.py
src/eval_vlm/results/: __init__.py  store.py
src/eval_vlm/scoring/: __init__.py  base.py  exact_match.py  registry.py  token_f1.py
src/eval_vlm/templates/: config.pred.template.yaml  config.template.yaml
tests/: conftest.py  test_cmnn_backend.py  test_loader.py  test_mnn_backend.py  test_overrides.py  test_pipeline.py  test_pred.py  test_rollout.py  test_scoring.py  test_splitter.py  test_traceability.py  test_workspace.py
tests/fixtures/: llamafactory_conversations.json  llamafactory_demo.json  llamafactory_tworound.json
